--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width : 100px) and (max-width : 600px) {
+@media only screen and (min-width : 100px) and (max-width : 768px) {
 
     * {
         margin: 0;
@@ -156,10 +156,23 @@
         margin: 0px 0px 4px 0px;
         height: 48%;
         width: 18.90%;
+        /* width: 18%; */
         font-size: 22px;
         /* font-weight: 600; */
     }
     
+    .level-buttons:nth-of-type(1),
+    .level-buttons:nth-of-type(6) {
+        margin-left: 1.5%;
+        /* border: 1px solid rebeccapurple; */
+    }
+
+    .level-buttons:nth-of-type(5),
+    .level-buttons:nth-of-type(10) {
+        margin-right: 1.5%;
+        /* border: 1px solid rebeccapurple; */
+    }
+
     .level-buttons:hover {
         color: darkslategrey;
         /* #1897b4 */
@@ -175,6 +188,7 @@
         height: 140px;
         background: #676668;
         /* background: orange; */
+        padding: 1% 0% 1% 0%;
         margin-bottom: 10px;
         /* FLEX WILL MESS UP BUTTON ANIMATION  */
         /* display: flex;
@@ -356,5 +370,51 @@
 
    .ordered-stat.second-ordered-stat-container span {
         margin: 0px 0px 0px 0px;
+    }
+}
+
+@media only screen and (max-width : 700px) {
+    
+    .level-buttons:nth-of-type(1),
+    .level-buttons:nth-of-type(6) {
+        margin-left: 1%;
+        /* border: 1px solid rebeccapurple; */
+    }
+
+    .level-buttons:nth-of-type(5),
+    .level-buttons:nth-of-type(10) {
+        margin-right: 1%;
+        /* border: 1px solid rebeccapurple; */
+    }
+
+}
+
+@media only screen and (max-width : 500px) {
+
+    .level-buttons:nth-of-type(1),
+    .level-buttons:nth-of-type(6) {
+        margin-left: 0.5%;
+        /* border: 1px solid rgb(153, 51, 51); */
+    }
+
+    .level-buttons:nth-of-type(5),
+    .level-buttons:nth-of-type(10) {
+        margin-right: 0.5%;
+        /* border: 1px solid rebeccapurple; */
+    }
+
+    @media only screen and (max-width : 400px) {
+    
+        .level-buttons:nth-of-type(1),
+        .level-buttons:nth-of-type(6) {
+            margin-left: 0%;
+            /* border: 1px solid rgb(153, 51, 51); */
+        }
+    
+        .level-buttons:nth-of-type(5),
+        .level-buttons:nth-of-type(10) {
+            margin-right: 0%;
+            /* border: 1px solid rebeccapurple; */
+        }
     }
 }
