--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -245,7 +245,7 @@
         text-align: center;
         font-size: 20px;
         /* font-weight: 700;   */
-        margin: 0px 0px 0px 10%;
+        margin: 0px 0px 0px 0%;
         outline: none;
     }
 
@@ -270,6 +270,32 @@
         display: none;
     }
     
+    /*  !!! INCLUDE THIS IN .startPlay !!! */
+    .reset-button {
+        font-family: 'Orbitron', sans-serif;
+        text-transform: uppercase;
+        font-weight: 400;
+        background: grey;
+        border: 4px solid #000000;
+        /* padding-right: 5px;
+        padding-left: 5px; */
+        height: 65px;
+        width: 100px;
+        text-align: center;
+        font-size: 20px;
+        /* font-weight: 700;   */
+        margin: 0px 0px 0px 0%;
+        outline: none;
+    }
+
+    .reset-button:hover {
+        background: orange;
+        cursor: pointer;
+        font-weight:600;
+        border: 3px solid black;
+    }
+
+
     h1 {
         font-size: 36px;
         letter-spacing: .15rem;
@@ -285,7 +311,7 @@
     }
     
     .logo {
-        margin: 0px 10% 0px 0px;
+        /* margin: 0px 0% 0px 0px; */
         font-size: 36px;
         /* font-weight: 500; */
     }
@@ -374,9 +400,11 @@
     .button-logo-container {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         height: 100px;
         margin-bottom: 20px;
+
+        /* border: 3px solid black; */
     }
     
     /* ALTERNATING COLOR LIST ITEMSS */
