--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -69,7 +69,7 @@
         /* font-family: 'Bungee Inline', cursive; */
         font-family: 'Orbitron', sans-serif;
         text-transform: uppercase;
-        background: #ffa600c5;
+        background: orange;
         border: 5px solid black;
         height: 65px;
         width: 700px;
@@ -83,7 +83,7 @@
 
     .player__toggle:hover, .table__toggle:hover {
         background: orange;
-        border: 6px solid black;
+        border: 4px solid black;
         cursor: pointer;
         font-weight: 500;  
     }
@@ -157,6 +157,7 @@
         outline: none;
         background: grey;
         border: none;
+        /* border: 1px solid black; */
         margin: none;
         height: 100%;
         width: 9.43%;
@@ -166,11 +167,14 @@
     }
     
     .level-buttons:hover {
+        /* height: 108%; */
         color: rgb(0, 0, 0);
         /* #1897b4 */
         background: orange;
         font-weight: 500;
+        /* font-size: 20px; */
         cursor: pointer;
+        border: 0px solid black;
     }
     
     .level-buttons.disabled:hover {
@@ -178,9 +182,11 @@
     }
 
     .selected {
+        height: 108%;
+        font-weight: 500;
         /* background: #39ac73; */
         background: darkcyan;
-        /* background: #376264; */
+        background: orange;
     } 
     
     
@@ -231,7 +237,7 @@
         outline: none;
     }
     
-    .startPlay {
+    .start-play-reset {
         /* font-family: 'Bungee Inline', cursive; */
         font-family: 'Orbitron', sans-serif;
         text-transform: uppercase;
@@ -249,18 +255,18 @@
         outline: none;
     }
 
-    .startPlay:hover {
+    .start-play-reset:hover {
         background: orange;
         cursor: pointer;
         font-weight:600;
         border: 3px solid black;
     }
 
-    .startPlay.disabled {
+    .start-play-reset.disabled {
         background: orange;
     }
 
-    .startPlay.disabled:hover {
+    .start-play-reset.disabled:hover {
         font-weight: 400;
         cursor: not-allowed;
         border: 4px solid #000000;
@@ -271,29 +277,26 @@
     }
     
     /*  !!! INCLUDE THIS IN .startPlay !!! */
-    .reset-button {
+    /* .reset-button {
         font-family: 'Orbitron', sans-serif;
         text-transform: uppercase;
         font-weight: 400;
         background: grey;
         border: 4px solid #000000;
-        /* padding-right: 5px;
-        padding-left: 5px; */
         height: 65px;
         width: 100px;
         text-align: center;
         font-size: 20px;
-        /* font-weight: 700;   */
         margin: 0px 0px 0px 0%;
         outline: none;
-    }
+    } */
 
-    .reset-button:hover {
+    /* .reset-button:hover {
         background: orange;
         cursor: pointer;
         font-weight:600;
         border: 3px solid black;
-    }
+    } */
 
 
     h1 {
