--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -1,17 +1,16 @@
-@media only screen and (min-width : 100px) and (max-width : 768px) {
-
+@media only screen and (min-width: 100px) and (max-width: 768px) {
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
-    
+
     .hidden {
         display: none;
     }
-    
+
     body {
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
     }
 
     .main {
@@ -24,12 +23,12 @@
         background: wheat;
         /* border-radius: .5rem; */
     }
-    
+
     .title {
         text-align: center;
         margin: 5px 0px 10px 0px;
     }
-    
+
     /* HIDDEN IN XSMALL */
     .intro.description {
         display: none;
@@ -44,11 +43,11 @@
         /* color: #dd1534; */
         color: #c93d1b;
     }
-    
+
     .green {
-        color:  #0E7C4A;
+        color: #0e7c4a;
     }
-    
+
     /* HIDDEN IN XSMALL */
     .fractions-container {
         width: 100vw;
@@ -57,17 +56,17 @@
         margin-bottom: 5%;
         display: none;
     }
-    
+
     /* !!! THIS IS AFFECTED BY FAKE DIV !!! */
     /* ADD BORDER TO SEE !!! */
     .sq-table-img-container {
         width: fit-content;
         /* height: 250px; */
         height: fit-content;
-        margin: 20px 0px 0px 0px; 
+        margin: 20px 0px 0px 0px;
         /* border: 3px solid green; */
-    } 
-    
+    }
+
     .sq-table-img {
         /* z-index: -1; */
         width: 100%;
@@ -76,7 +75,7 @@
         top: -30px;
         /* border: 3px solid black; */
     }
-    
+
     /* THIS IS A FAKE DIV TO MASK DIFFERENT FONTS IN PICTURE TEMPORARILY !!! */
     .table-img-header {
         z-index: 1;
@@ -87,7 +86,7 @@
         /* border: 5px solid black; */
 
         /* display: none; */
-}
+    }
 
     .table-img-header h2 {
         font-size: 12px;
@@ -106,17 +105,18 @@
     h2 {
         font-size: 18px;
         text-align: center;
-        letter-spacing: .05rem;
+        letter-spacing: 0.05rem;
     }
 
     /* CHOOSE YOUR LEVEL-CLICK PLAY-GUESS SQUARE */
     /* .description {
         font-size: 14px;
     } */
-    
+
     /* SQ TABLE/STATISTICS - PLAY BUTTON*/
-    .player__toggle, .table__toggle {
-        font-family: 'Orbitron', sans-serif;
+    .player__toggle,
+    .table__toggle {
+        font-family: "Orbitron", sans-serif;
         font-size: 16px;
         /* background: grey; */
         background: #ffa600;
@@ -147,20 +147,20 @@
         background: #ffa600;
         text-transform: capitalize;
     }
-    
+
     .level-buttons {
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
         outline: none;
         background: grey;
         /* border: none; */
         margin: 0px 0px 4px 0px;
         height: 48%;
-        width: 18.90%;
+        width: 18.9%;
         /* width: 18%; */
         font-size: 22px;
         /* font-weight: 600; */
     }
-    
+
     .level-buttons:nth-of-type(1),
     .level-buttons:nth-of-type(6) {
         margin-left: 1.5%;
@@ -178,11 +178,11 @@
         /* #1897b4 */
         background: orange;
     }
-    
+
     .selected {
         background: darkcyan;
-    } 
-    
+    }
+
     .buttons-row {
         width: 100%;
         height: 140px;
@@ -194,18 +194,18 @@
         /* display: flex;
         justify-content: space-around; */
     }
-    
+
     h2.question {
         color: darkcyan;
     }
-    
+
     .question-span {
         font-size: 22px;
         color: darkcyan;
     }
-    
+
     input {
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
         margin: 0px 0px 10px 26%;
         width: 50%;
         height: 35px;
@@ -216,9 +216,9 @@
         padding: 13px 13px 13px 13px;
         /* outline: none; */
     }
-    
+
     .startPlay {
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
         background: grey;
         height: 45px;
         width: 70px;
@@ -229,7 +229,46 @@
         margin: 10px 0px 8px 8%;
         /* outline: none; */
     }
-    
+
+    /* =================================================== */
+
+    .start-play-reset {
+        /* font-family: 'Bungee Inline', cursive; */
+        font-family: "Orbitron", sans-serif;
+        text-transform: uppercase;
+        font-weight: 400;
+        background: grey;
+        border: 4px solid #000000;
+        /* padding-right: 5px;
+        padding-left: 5px; */
+        /* height: 65px; */
+        height: 50px;
+        /* width: 100px; */
+        width: 70px;
+        text-align: center;
+        font-size: 15px;
+        /* font-weight: 700;   */
+        margin: 0px 0px 0px 0%;
+        outline: none;
+    }
+
+    .start-play-reset:hover {
+        background: orange;
+        cursor: pointer;
+        font-weight: 600;
+        border: 3px solid black;
+    }
+
+    .start-play-reset.disabled {
+        background: orange;
+    }
+
+    .start-play-reset.disabled:hover {
+        font-weight: 400;
+        cursor: not-allowed;
+        border: 4px solid #000000;
+    }
+
     /* =================================================== */
 
     /* FIX THIS USE SPAN FOR LEVEL AND RANGE TOO !!! */
@@ -247,24 +286,26 @@
         color: darkslategrey;
     }
     /* =================================================== */
-    
+
     .logo {
         margin: 0px 5% 0px 0px;
         padding-right: 10px;
         font-size: 22px;
         font-weight: 600;
     }
-    
+
     /* CSS BLINKER */
     .blink {
         /* animation: blinker 1.1s linear infinite; */
         animation: blinker 1.1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
     }
-    
-    @keyframes blinker {  
-        50% { opacity: 0.0; }
+
+    @keyframes blinker {
+        50% {
+            opacity: 0;
+        }
     }
-    
+
     .prog-bar-text {
         text-align: right;
         /* font-weight: 100; */
@@ -273,7 +314,7 @@
         font-size: 16px;
         /* color: black; */
     }
-    
+
     .prog-bar-container {
         width: 100%;
         /* height: 25px; */
@@ -283,32 +324,32 @@
         /* border-radius: 10px; */
         background-color: #c93d1b;
     }
-    
+
     /* NOT WORKING COS ITS NOT EMPTY */
     /* HAVE TO REMOVE BORDER  ???*/
     /* MAYBE ADD BORDER ONLY WHEN ITS DISPLAYED??? */
-    .prog-bar-container:empty{
+    .prog-bar-container:empty {
         /* display:none; */
         /* OR */
-        border:none;
+        border: none;
         /* margin: 20px 0px 0px 0px; */
     }
-    
+
     .prog-bar {
         width: 0%;
         height: 35px;
         padding-top: 1px;
         padding-bottom: 16px;
         text-align: center;
-        background-color: #0E7C4A;
-        -webkit-transition: all 1.0s ease-in-out;
-        transition: all 1.0s ease-in-out;
+        background-color: #0e7c4a;
+        -webkit-transition: all 1s ease-in-out;
+        transition: all 1s ease-in-out;
     }
-    
+
     .button-logo-container {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         margin-bottom: 10px;
     }
     /* ALTERNATING COLOR LIST ITEMSS */
@@ -318,7 +359,7 @@
     span:nth-child(odd){
       color:red;
     } */
-    
+
     .ordered-stat {
         display: flex;
         /* flex-direction: column; */
@@ -329,11 +370,11 @@
         text-align: center;
         font-size: 12px;
     }
-    
+
     .ordered-stat:empty {
-        display:none;
+        display: none;
     }
-    
+
     .ordered-stat.first-ordered-stat-container {
         /* align-items: center; */
         justify-content: center;
@@ -356,8 +397,8 @@
         padding: 2px;
         margin: 7px 2px 0px 2px;
         border: 1px solid black;
-    } 
-    
+    }
+
     /* .ordered-stat.first-ordered-stat-container {
         padding-top: 9px;
     } */
@@ -368,13 +409,12 @@
         padding-top: 9px;
     }
 
-   .ordered-stat.second-ordered-stat-container span {
+    .ordered-stat.second-ordered-stat-container span {
         margin: 0px 0px 0px 0px;
     }
 }
 
-@media only screen and (max-width : 700px) {
-    
+@media only screen and (max-width: 700px) {
     .level-buttons:nth-of-type(1),
     .level-buttons:nth-of-type(6) {
         margin-left: 1%;
@@ -386,11 +426,9 @@
         margin-right: 1%;
         /* border: 1px solid rebeccapurple; */
     }
-
 }
 
-@media only screen and (max-width : 500px) {
-
+@media only screen and (max-width: 500px) {
     .level-buttons:nth-of-type(1),
     .level-buttons:nth-of-type(6) {
         margin-left: 0.5%;
@@ -403,14 +441,13 @@
         /* border: 1px solid rebeccapurple; */
     }
 
-    @media only screen and (max-width : 400px) {
-    
+    @media only screen and (max-width: 400px) {
         .level-buttons:nth-of-type(1),
         .level-buttons:nth-of-type(6) {
             margin-left: 0%;
             /* border: 1px solid rgb(153, 51, 51); */
         }
-    
+
         .level-buttons:nth-of-type(5),
         .level-buttons:nth-of-type(10) {
             margin-right: 0%;
